// События, которые контекст публикует
syntax = "proto3";

message UserDeleted {
    string user_id = 1;
}

message UserRegistered {
    string user_id = 1;
}